[package]
name = "csv-qsniffer"
version = "0.1.0"
edition = "2021"
description = "A CSV dialect detection library using Table Uniformity Method"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jqnatividad/csv-qsniffer"

[[bin]]
name = "csv-qsniffer"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap", "dep:serde_json"]

[dependencies]
csv = "1.3"
regex = "1.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.8"
